--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
+# == Pip Installable ==
+# These can be installed with: pip install -r requirements.txt
+
 pygame
 numpy
 av
-python-vlc
-pyaudio
-psutil
-#pygobject-stubs ä
-#pygobject==3.50.1
+
+# == System Dependencies (NOT installed by pip) ==
+# This application requires system-level libraries that pip cannot install.
+# You MUST install these first using your system's package manager.
+#
+# --- 1. For GStreamer (Video Player) ---
+#
+# macOS (using Homebrew):
+# brew install gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad pygobject3
+#
+# Linux (Debian/Ubuntu):
+# sudo apt install python3-gi python3-gi-cairo gir1.2-gst-plugins-base-1.0 gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad
+#
+#
+# --- 2. For Pygame (Window, Fonts, Input) ---
+#
+# macOS (using Homebrew):
+# brew install sdl2 sdl2_image sdl2_mixer sdl2_ttf
+#
+# Linux (Debian/Ubuntu):
+# sudo apt install libsdl2-2.0-0 libsdl2-image-2.0-0 libsdl2-mixer-2.0-0 libsdl2-ttf-2.0-0
